--- a/4-2/WebContent/select.html
+++ b/4-2/WebContent/select.html
@@ -8,8 +8,8 @@
  <div align="center">
  今日は何月ですか？
  <!--問① web.xmlのurl-patternを確認しformの遷移先を指定しましょう。 -->
- <!-- actionの中には　"/プロジェクトで使用している名前/htmlファイル名"　を入力する -->
- <form action="/4-2/select" method="post">
+ <!-- actionの中には　"../プロジェクトで使用している名前/htmlファイル名"　を入力する -->
+ <form action="../4-2/select" method="post">
  <select name="month">
  <option value="1">1月</option>
  <option value="2">2月</option>
